Time: 1936 ms (5.01%) | Memory: 61 MB (5.85%) - LeetSync